@@ -7,20 +7,19 @@ Depends:
     methods,
     stats,
     modeltools,
-    nnls (>= 1.1)
+    nnls (>= 1.1),
+    ggplot2
 Suggests:
     MASS,
     vcd,
     mlbench,
-    ggplot2
 Author: Manuel J. A. Eugster
     <manuel.eugster@stat.uni-muenchen.de>
 Maintainer: Manuel J. A. Eugster
     <manuel.eugster@stat.uni-muenchen.de>
-Description: The main function archetypes implements a
-    framework for archetypal analysis supporting arbitary
-    problem solving mechanisms for the different conceputal
-    parts of the algorithm.
+Description: A framework for archetypal analysis supporting
+    arbitary problem solving mechanisms for the different
+    conceputal parts of the algorithm.
 License: GPL (>= 2)
 Revision: 44
 Collate:
@@ -40,3 +39,4 @@ Collate:
     'skeletonplot.R'
     'panorama.R'
     'profile.R'
+    'parameters.R'
