@@ -1,8 +1,13 @@
 #' @include archetypes-class.R
+#' @include archetypes-rep.R
 {}
 
 
 #' Run archetypes algorithm repeatedly
+#'
+#' Run archetypes algorithm repeatedly for different numbers of
+#' archetypes. One step is defined by the number of archetypes
+#' \code{k} and the number of replications \code{nrep}.
 #'
 #' @param ... Passed to the specific archetype function.
 #' @param k A vector of integers passed in turn to the k argument of
@@ -14,12 +19,10 @@
 #'   \code{\link{robustArchetypes}},
 #' @param verbose Show progress during exection.
 #'
-#' @return A list with \code{k} elements and class attribute
-#'   \code{stepArchetypes}. Each element is a list of class
-#'   \code{repArchetypes} with \code{nrep} elements; only for internal
-#'   usage.
+#' @return A list with \code{length(k)} elements and class attribute
+#'   \code{stepArchetypes}.
 #'
-#' @seealso \code{\link{archetypes}}
+#' @family archetypes
 #'
 #' @examples
 #'   \dontrun{
@@ -37,57 +40,33 @@
 #'
 #' @export
 stepArchetypes <- function(..., k, nrep = 3, method = archetypes, verbose = TRUE) {
+  stopifnot(nrep > 0)
 
-  mycall <- match.call()
   as <- list()
+  as$call <- match.call()
+  as$nrep <- nrep
+  as$k <- k
+  as$models <- list()
 
-  for ( i in 1:length(k) ) {
-    as[[i]] <- list()
-    class(as[[i]]) <- 'repArchetypes'
-
-    for ( j in seq_len(nrep) ) {
-      if ( verbose )
-        cat('\n*** k=', k[i], ', rep=', j, ':\n', sep='')
-
-      as[[i]][[j]] <- method(..., k=k[i])
+  for ( i in seq(along = k) ) {
+    as$models[[i]] <- step()
+    for ( j in seq(length = nrep) ) {
+      as$models[[i]][[j]] <- method(..., k = k[i], verbose = verbose)
     }
   }
 
-  return(structure(as, class='stepArchetypes', call=mycall))
+  subclass(as, "stepArchetypes")
 }
 
 
 
-setOldClass('repArchetypes')
-setOldClass('stepArchetypes')
-
-
-
-#' Extract method
-#'
-#' An extraction on a \code{stepArchetypes} object returns again a
-#' \code{stepArchetypes} object.
-#'
-#' @param x A \code{stepArchetypes} object.
-#' @param i The indizes to extract.
-#' @return A \code{stepArchetypes} object containing only the parts
-#'   defined in \code{i}.
-#' @method [ stepArchetypes
-#' @rdname extract
-#'
-#' @S3method "[" stepArchetypes
-`[.stepArchetypes` <- function(x, i) {
-  y <- unclass(x)[i]
-  attributes(y) <- attributes(x)
-
-  return(y)
-}
+setOldClass("stepArchetypes")
 
 
 
 #' @S3method print stepArchetypes
 print.stepArchetypes <- function(x, ...) {
-  cat('StepArchetypes object\n\n')
+  cat('stepArchetypes object\n\n')
   cat(deparse(attr(x, 'call')), '\n')
 }
 
@@ -116,23 +95,24 @@ summary.stepArchetypes <- function(object, ...) {
 
 
 
-#' @aliases parameters,stepArchetypes-method
-#' @rdname parameters
-#' @importFrom modeltools parameters
-#' @exportMethod parameters
-setMethod('parameters', signature = c(object = 'stepArchetypes'),
-function(object, ...) {
-  lapply(object, parameters)
-})
-
-
-
-#' @rdname nparameters
-#' @method nparameters stepArchetypes
+#' Extract method
 #'
-#' @S3method nparameters stepArchetypes
-nparameters.stepArchetypes <- function(object, ...) {
-  return(sapply(object, nparameters))
+#' An extraction on a \code{stepArchetypes} object returns again a
+#' \code{stepArchetypes} object.
+#'
+#' @param x A \code{stepArchetypes} object.
+#' @param i The indizes to extract.
+#' @return A \code{stepArchetypes} object containing only the parts
+#'   defined in \code{i}.
+#' @method [ stepArchetypes
+#' @rdname extract
+#'
+#' @S3method "[" stepArchetypes
+`[.stepArchetypes` <- function(x, i) {
+  y <- unclass(x)[i]
+  attributes(y) <- attributes(x)
+
+  return(y)
 }
 
 
@@ -142,9 +122,20 @@ nparameters.stepArchetypes <- function(object, ...) {
 #'
 #' @S3method rss stepArchetypes
 rss.stepArchetypes <- function(object, ...) {
-  ret <- t(sapply(object, rss))
-  rownames(ret) <- paste('k', nparameters(object), sep='')
-  return(ret)
+  ret <- lapply(object$models, rss)
+  ret <- do.call(rbind, ret)
+  ret <- data.frame(Archetypes = nparameters(as), ret)
+  subclass(ret, "stepArchetypes_rss")
+}
+
+
+
+plot.stepArchetypes_rss <- function(x, y = NULL, ...) {
+  p <- ggplot(melt(x, "Archetypes"),
+              aes(ordered(Archetypes), value, group = variable))
+  p <- p + geom_line()
+  p <- p + xlab("Number of archetypes") + ylab("RSS")
+  p
 }
 
 
@@ -159,71 +150,51 @@ rss.stepArchetypes <- function(object, ...) {
 #'
 #' @S3method bestModel stepArchetypes
 bestModel.stepArchetypes <- function(object, ...) {
-  zsmin <- lapply(object, bestModel)
-
-  if ( length(zsmin) == 1 )
-    return(zsmin[[1]])
-  else
-    return(zsmin)
+  object$models <- lapply(object$models, bestModel)
+  object$nrep <- 1
+  object
 }
 
 
 
-#' @S3method print repArchetypes
-print.repArchetypes <- function(x, ...) {
-  for ( i in seq_along(x) )
-    print(x[[i]], ...)
-
-  invisible(x)
-}
-
-
-
-#' @aliases parameters,repArchetypes-method
+#' @aliases parameters,stepArchetypes-method
 #' @rdname parameters
 #' @importFrom modeltools parameters
 #' @exportMethod parameters
-setMethod('parameters', signature = signature(object = 'repArchetypes'),
+setMethod('parameters', signature = c(object = 'stepArchetypes'),
 function(object, ...) {
-  lapply(object, parameters)
+  subclass(lapply(object, parameters), "stepArchetypes_parameters")
 })
 
 
 
-#' @rdname rss
-#' @method rss repArchetypes
-#'
-#' @S3method rss repArchetypes
-rss.repArchetypes <- function(object, ...) {
-  ret <- sapply(object, rss)
-  names(ret) <- paste('r', seq_along(ret), sep='')
-
-  return(ret)
-}
-
-
-
 #' @rdname nparameters
-#' @method nparameters repArchetypes
+#' @method nparameters stepArchetypes
 #'
-#' @S3method nparameters repArchetypes
-nparameters.repArchetypes <- function(object, ...) {
-  nparameters(object[[1]])
+#' @S3method nparameters stepArchetypes
+nparameters.stepArchetypes <- function(object, ...) {
+  return(sapply(object$model, nparameters))
 }
 
 
 
-#' @rdname bestModel
-#' @method bestModel repArchetypes
-#'
-#' @S3method bestModel repArchetypes
-bestModel.repArchetypes <- function(object, ...) {
-  m <- which.min(rss(object))
 
-  if ( length(m) == 0 )
-    return(object[[1]])
-  else
-    return(object[[m]])
+step <- function() {
+  structure(list(), class = c("step", "list"))
 }
 
+rss.step <- function(object, ...) {
+  rss <- sapply(object, rss)
+  names(rss) <- sprintf("Replication%s", seq(along = rss))
+  rss
+}
+
+nparameters.step <- function(object, ...) {
+  sapply(object, nparameters)[1]
+}
+
+bestModel.step <- function(object, ...) {
+  which <- which.min(rss(object))
+  subclass(list(object[[which]]), "step")
+}
 
